Added functionality for color and sizing
Added the following:

- Color buttons
- A Change Size button that will prompt the user for input and accept values between 10 and 100

--- a/index.html
+++ b/index.html
@@ -11,10 +11,19 @@
 <body>
 
     <div class="container">
-        <h2>Just start drawing!</h2>
-
-        <div class="canvas"></div>
-        <button id="reset">Reset canvas</button>
+        <div class="left-column">
+            <button id="canvas-size">Change Size</button>
+            <button class="color-button">Red<span></span></button>
+            <button class="color-button">Green<span></span></button>
+            <button class="color-button">Blue<span></span></button>
+            <button class="color-button">Black<span></span></button>
+            <button class="color-button">White<span></span></button>
+            <button id="reset">Reset Canvas</button>
+        </div>
+        <div class="right-column">
+            <h2>Just start drawing!</h2>
+            <div class="canvas"></div>
+        </div>
     </div>
 
     <script src="script.js"></script>
