Added random and gradient modes, cleaned code
Added Random mode that will color a square in a random color. Added Gradient mode that will shade a square to black in 10 steps.

Cleaned up code:

- Removed log statements
- Changed variables to constants whenever possible
- Set up new constants to avoid spelling errors

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
             <button class="color-button">Blue<span></span></button>
             <button class="color-button">Black<span></span></button>
             <button class="color-button">White<span></span></button>
+            <button class="color-button">Random<span class="rainbow-wheel"></span></button>
+            <button class="color-button">Gradient<span class="bw-gradient"></span></button>
             <button id="reset">Reset Canvas</button>
         </div>
         <div class="right-column">
