Added click drawing mode, keybinds and info boxes
- Added a click drawing mode that can be changed using the button or the M-key on the keyboard
- Added info boxes that display the current gris size and drawing mode

--- a/index.html
+++ b/index.html
@@ -12,14 +12,20 @@
 
     <div class="container">
         <div class="left-column">
+            <div>
+                <p id="grid-size-info" class="info-box"></p>
+                <p id="drawing-mode-info" class="info-box"></p>
+                <p class="info-box">To change drawing mode press M</p>
+            </div>
             <button id="canvas-size">Change Size</button>
-            <button class="color-button">Red<span></span></button>
-            <button class="color-button">Green<span></span></button>
-            <button class="color-button">Blue<span></span></button>
-            <button class="color-button">Black<span></span></button>
-            <button class="color-button">White<span></span></button>
-            <button class="color-button">Random<span class="rainbow-wheel"></span></button>
-            <button class="color-button">Gradient<span class="bw-gradient"></span></button>
+            <button id="drawing-mode">Drawing (M)ode</button>
+            <button id="red" class="color-button">Red<span></span></button>
+            <button id="green" class="color-button">Green<span></span></button>
+            <button id="blue" class="color-button">Blue<span></span></button>
+            <button id="black" class="color-button">Black<span></span></button>
+            <button id="white" class="color-button">White<span></span></button>
+            <button id="random" class="color-button">Random<span class="rainbow-wheel"></span></button>
+            <button id="gradient" class="color-button">Gradient<span class="bw-gradient"></span></button>
             <button id="reset">Reset Canvas</button>
         </div>
         <div class="right-column">
