Added keybinds for all colors

--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
                 <p class="info-box">To change drawing mode press M</p>
             </div>
             <button id="canvas-size">Change Size</button>
-            <button id="drawing-mode">Drawing (M)ode</button>
-            <button id="red" class="color-button">Red<span></span></button>
-            <button id="green" class="color-button">Green<span></span></button>
-            <button id="blue" class="color-button">Blue<span></span></button>
-            <button id="black" class="color-button">Black<span></span></button>
-            <button id="white" class="color-button">White<span></span></button>
-            <button id="random" class="color-button">Random<span class="rainbow-wheel"></span></button>
-            <button id="gradient" class="color-button">Gradient<span class="bw-gradient"></span></button>
+            <button id="drawing-mode">(M) Mode</button>
+            <button id="red" class="color-button">(1) Red<span></span></button>
+            <button id="green" class="color-button">(2) Green<span></span></button>
+            <button id="blue" class="color-button">(3) Blue<span></span></button>
+            <button id="black" class="color-button">(4) Black<span></span></button>
+            <button id="white" class="color-button">(5) White<span></span></button>
+            <button id="random" class="color-button">(Q) Random<span class="rainbow-wheel"></span></button>
+            <button id="gradient" class="color-button">(E) Gradient<span class="bw-gradient"></span></button>
             <button id="reset">Reset Canvas</button>
         </div>
         <div class="right-column">
